@@ -1,11 +1,0 @@
-package com.phdsteve.roddenberry.block;
-
-public class BlockFlag extends BlockRoddenberry
-{
-    public BlockFlag()
-    {
-        super();
-        this.setBlockName("flag");
-        this.setBlockTextureName("roddenberry:flag");
-    }
-}
