@@ -1,11 +1,0 @@
-package com.phdsteve.roddenberry.item;
-
-public class ItemMapleLeaf extends ItemRoddenberry
-{
-    public ItemMapleLeaf()
-    {
-        super();
-        this.setUnlocalizedName("mapleLeaf");
-        this.setTextureName("roddenberry:mapleLeaf");
-    }
-}
