@@ -1,4 +1,6 @@
-package com.phdsteve.roddenberry.item;
+package com.phdsteve.roddenberry.item.misc;
+
+import com.phdsteve.roddenberry.item.ItemRoddenberry;
 
 public class ItemLatinumStrip extends ItemRoddenberry
 {
