@@ -4,7 +4,7 @@ public class Reference
 {
     public static final String MOD_ID = "roddenberry";
     public static final String MOD_NAME = "To Boldly Go";
-    public static final String VERSION = "1.7.10-Build1001";
+    public static final String VERSION = "1.7.10-Build1002";
     public static final String CLIENT_PROXY_CLASS = "com.phdsteve.roddenberry.proxy.ClientProxy";
     public static final String SERVER_PROXY_CLASS = "com.phdsteve.roddenberry.proxy.ServerProxy";
     public static final String GUI_FACTORY_CLASS = "com.phdsteve.roddenberry.client.gui.GuiFactory";
