@@ -1,12 +1,13 @@
 package com.phdsteve.roddenberry;
 
-import com.phdsteve.roddenberry.client.handler.KeyInputEventHandler;
+//import com.phdsteve.roddenberry.client.handler.KeyInputEventHandler;
 import com.phdsteve.roddenberry.handler.ConfigurationHandler;
 import com.phdsteve.roddenberry.init.*;
 import com.phdsteve.roddenberry.proxy.IProxy;
 import com.phdsteve.roddenberry.reference.Reference;
 import com.phdsteve.roddenberry.utility.LogHelper;
 import com.phdsteve.roddenberry.init.ModWorld;
+
 import cpw.mods.fml.common.FMLCommonHandler;
 import cpw.mods.fml.common.Mod;
 import cpw.mods.fml.common.SidedProxy;
@@ -26,6 +27,7 @@ public class roddenberry
     @Mod.EventHandler
     public void preInit(FMLPreInitializationEvent event)
     {
+        LogHelper.info("To Boldly Go version " + Reference.VERSION);
         LogHelper.info("Initializing To Boldly Go...");
 
         ConfigurationHandler.init(event.getSuggestedConfigurationFile());
@@ -33,12 +35,12 @@ public class roddenberry
 
         ModWorld.initWorldGen();
 
-        ModItems.init();
         ModBlocks.init();
+        ModItems.init();
         ModArmors.init();
         ModTools.init();
 
-        proxy.registerKeyBindings();
+//        proxy.registerKeyBindings();
     }
 
     @Mod.EventHandler
@@ -47,7 +49,7 @@ public class roddenberry
         CraftingRecipes.init();
         FurnaceRecipes.init();
 
-        FMLCommonHandler.instance().bus().register(new KeyInputEventHandler());
+//        FMLCommonHandler.instance().bus().register(new KeyInputEventHandler());
     }
 
     @Mod.EventHandler
