@@ -3,7 +3,7 @@
   "modid": "roddenberry",
   "name": "To Boldly Go",
   "description": "A fan-built Star Trek mod.",
-  "version": "Build 1000",
+  "version": "Build 1002",
   "mcversion": "1.7.10",
   "url": "",
   "updateUrl": "",
